# Hitos_SBC

./: README.md
hito_1/blinking_led/: CMakeLists.txt
hito_2/adc/: sdkconfig
hito_2/adc/main/: .cproject  adc.c
hito_3/: CMakeLists.txt  sdkconfig
hito_3/main/: CMakeLists.txt  ldr_monitor.c  ldr_monitor.h  main.c  wifi_manager.c  wifi_manager.h
hito_4/: CMakeLists.txt  partitions.csv  sdkconfig.old
hito_4/components/ssd1306/: ssd1306.h
hito_4/main/: CMakeLists.txt  main.c
hito_4/main/drivers/: adc_driver.c
hito_4/main/network/: mqtt_manager.c  mqtt_manager.h  wifi_manager.c  wifi_manager.h
hito_4/main/sensors/: ldr_sensor.c  ldr_sensor.h
hito_4/main/utils/: math_utils.c
hito_5/: AhorroEnergetico.txt  CMakeLists.txt  partitions.csv
hito_5/components/bme68x/: CMakeLists.txt
hito_5/main/: CMakeLists.txt  main.c
hito_5/main/network/: mqtt_manager.c  mqtt_manager.h  wifi_manager.c  wifi_manager.h
hito_5/main/sensors/: CMakeLists.txt  bme680.c  bme680.h  bme680_sensor.c  bme680_sensor.h  dht_sensor.c  dht_sensor.h  ldr_sensor.h
hito_5/main/utils/: TelegramCertificate.h  math_utils.h  telegram_bot.c  telegram_bot.h
hito_6/: CMakeLists.txt  partitions.csv  sdkconfig.old
hito_6/main/: CMakeLists.txt  main.c
hito_6/main/network/: wifi_manager.c  wifi_manager.h
hito_6/main/ota/: ota_manager.c  ota_manager.h
